--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -38,6 +38,7 @@ $header-bg-color-secondary: $green !default;
 
 // Text
 $section-headings-color: $nearblack !default;
+$section-headings-border-color: $lightgreen !default;
 $body-text-color: $nearblack !default;
 $body-link-color: $green !default;
 $blockquote-text-color: $gray !default;
