--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -33,7 +33,7 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: $nearwhite !default;
-$header-bg-color: $lightyellowgreen !default;
+$header-bg-color: $green !default;
 $header-bg-color-secondary: $green !default;
 
 // Text
