--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
               <li><a href="{{ site.url }}">ホーム</a></li>
               <li><a href="{% link _pages/about.md %}">ごあんない</a></li>
               <li><a href="{% link blog/index.html %}">ブログ</a></li>
-              <li><a href="{% link feature/index.md %}">特集</a></li>
+              <li><a href="{{ site.url }}/feature">特集</a></li>
           </ul>
       </nav>
       {% if site.github.is_project_page %}
