--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
       <nav class="header-navigation">
           <ul class="header-navigation-list">
               <li><a href="{{ site.url }}">ホーム</a></li>
-              <li><a href="{% link _pages/about.md %}">ごあんない</a></li>
+              <li><a href="{% link about.md %}">ごあんない</a></li>
               <li><a href="{% link blog/index.html %}">ブログ</a></li>
               <li><a href="{{ site.url }}/feature">特集</a></li>
           </ul>
