--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -196,11 +196,15 @@ a {
   }
 
   .meta {
-      margin: 0 0 3rem;
+      margin: 0 0 1rem;
   }
   .meta-item {
       display: inline-block;
       margin: 0 1rem 0 0;
+  }
+
+  .meta-devide-line {
+      margin: 0 0 3rem;
   }
 
   img {
