--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -36,6 +36,11 @@ $header-heading-color: $nearwhite !default;
 $header-bg-color: $green !default;
 $header-bg-color-secondary: $green !default;
 
+// Footers
+$footer-heading-color: $nearblack !default;
+$footer-bg-color: $lightyellowgreen !default;
+$footer-border-top-color: $green !default;
+
 // Text
 $section-headings-color: $nearblack !default;
 $section-headings-border-color: $green !default;
