--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -326,6 +326,11 @@ a {
     margin-top: 0;
   }
 
+  ul.no-list-style {
+    list-style: none;
+    padding-left: 0;
+  }
+
   blockquote {
     padding: 0 1rem;
     margin-left: 0;
