--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -31,6 +31,9 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: $body-text-color;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 a {
@@ -392,9 +395,7 @@ a {
 .site-footer {
     background-color: $footer-bg-color;
     border-top: solid 6px $footer-border-top-color;
-    margin-top: 2rem;
-
-
+    margin-top: auto;
 }
 
 .site-footer-content {
